Commented in HTML tutorial reference

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+<!--Tutorial: How To Web Dev: create simple personal portfolio website with html & css-->
 <body>
     <header class="header">
         <a href="#" class="logo"><span>Damon</span>Lundin-Bingham</a>
