--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--Tutorial: How To Web Dev: create simple personal portfolio website with html & css-->
 <body>
     <header class="header">
-        <a href="#" class="logo"><span>Damon</span>Lundin-Bingham</a>
+        <a href="#" class="logo"><span>Da</span>mon</a>
 
         <nav class="navbar">
             <a href="#" class="active">Portfolio</a>
@@ -19,6 +19,8 @@
             <a href="#">Projects</a>
             <a href="#">Education</a>
         </nav>
+
+        <a href="#" class="contact">Contact Me</a>
     </header>
 </body>
 </html>
