Main - Contact and About

--- a/index.html
+++ b/index.html
@@ -22,5 +22,36 @@
 
         <a href="#" class="contact">Contact Me</a>
     </header>
+
+    <section class="home">
+        <div class="home-content">
+            <h3>Hi</h3>
+
+            <h1>I'm <span>Damon<br></span>a Frontend Developer</h1>
+
+            <p>Insert Text</p>
+
+            <div class="btn-box">
+                <button class="btn-1">Hire Me</button>
+                <button class="btn-2">Experience</button>
+            </div>
+        </div>
+        <div class="img-box">
+            <img src="Public/Screenshot 2024-09-19 132150.png" alt="">
+        </div>
+    </section>
+
+    <section class="about">
+
+        <div class="about-img">
+            <img src="Public/Screenshot 2024-09-19 132150.png" alt=""
+        </div>
+        
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend <span>Developer</span></h3>
+            <p>Insert Text</p>
+        </div>
+    </section>
 </body>
 </html>
