--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend <span>Developer</span></h3>
             <p>Insert Text</p>
+
+            <a href="#" class="btn-2">Experience</a>
         </div>
     </section>
 </body>
