footer social links and policies

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web Portfolio 2.0</title>
     <link rel="stylesheet" href="styles.css"
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <!--Tutorial: How To Web Dev: create simple personal portfolio website with html & css-->
 <body>
@@ -76,11 +77,12 @@
     </section>
 
     <footer class="footer">
+
         <div class="social">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+            <a href="#"><i class="bx bxl-youtube"></i></a>
+            <a href="#"><i class="bx bxl-instagram-alt"></i></a>
         </div>
 
         <ul class="list">
@@ -102,7 +104,7 @@
         </ul>
 
         <p class="copyright">
-
+            © 2024 Damon | All Rights Reserved
         </p>
     </footer>
 </body>
