CSS - about img
changed the image to display: flex; to make it more responsive however the whole page is not very responsive to certain dimensions. Overall the design is okay but i will look into building another portfolio from scratch and make it more aesthetically appealing to prospective clients and employers. Inspiration will be taken from the Apple home page.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <h1>I'm <span>Damon<br></span>a Frontend Developer</h1>
 
-            <p>Insert Text</p>
+            <p>i know a fella that can build you a web site...</p>
 
             <div class="btn-box">
                 <button class="btn-1">Hire Me</button>
